src/app/users/users-achievements/users-achievements.scss
@import '../../variables';

.achievements-container {
  max-width: 95%;
  margin: 0 auto;

  .references-list {
    display: flex;
    justify-content: center;
    text-align: center;
  }

  .certs-list {
    .cert-item {
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
    }
  }

  & mat-list, & ul, & ol {
    text-align: left;
  }

  mat-divider {
    margin-top: 1rem;
    background-color: $primary;
  }

  .profile-image{
    max-width: 15vh;
    border-radius: 50%;
    width: 100px;
    height: 100px;
  }

  .user-info {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    margin-bottom: 2rem;
   }

   .birth-info {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1rem;
   }

   .logo {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 2rem;
   }

  .mat-list-base .mat-list-item {
    &.mat-list-item-word-wrap {
      height: initial;
      margin: 0.75rem 0;
    }

    .mat-line {
      word-wrap: break-word;
      white-space: pre-wrap;
    }

    .achievement-header {
      display: grid;
      grid-template-areas: "txt dt";
      grid-template-columns: auto max-content;
      align-items: center;

      .achievement-text {
        grid-area: txt;
        display: flex;
        align-items: center;
      }

      .achievement-date {
        grid-area: dt;
      }
    }

    .achievement-buttons button {
      margin: 0.25rem 0.5rem 0.25rem 0;

      &:last-child {
        margin-right: 0;
      }
    }
  }

  .styled-link {
    color: #007bff;
    text-decoration: none;
    font-weight: bold;
  }

  .styled-link:hover {
    color: #0056b3;
    text-decoration: underline;
  }

  td-markdown {
    max-height: none;
    text-overflow: ellipsis;
    overflow: hidden;
    word-wrap: break-word;
    max-height: 150px;
    white-space: normal;
    display: block;
  }
}

.margin-r-1 {
  margin-right: 1rem
}

@media (max-width: $screen-sm) {
  .responsive-toolbar {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    width: 100%;
    height: auto;
    padding-bottom: 0.5rem;
  }

  .auto-adjust-buttons {
    display: flex;
    gap: 0.2rem;
    width: 100%;
  }

  .auto-adjust-buttons a {
    flex-grow: 1;
    text-align: center;
  }

  .auto-adjust-buttons span {
    font-size: 0.875em;
  }

  .margin-r-1 {
    margin-right: 0.2rem;
  }

  .center-text div {
    margin: 0 auto;
  }
}

